tests/ui/for/for-c-in-str.stderr
error[E0277]: the trait `IntoIterator` is not implemented for `&str`
  --> $DIR/for-c-in-str.rs:4:14
   |
LL |     for c in "asdf" {
   |              ^^^^^^ the trait `IntoIterator` is not implemented for `&str`, which is required by `&str: IntoIterator`
   |
   = note: required for `&str` to implement `IntoIterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
